@@ -393,8 +393,31 @@
 					<reuseForks>true</reuseForks>
 					<argLine>${surefireArgLine} -Xmx1024m -noverify --enable-preview</argLine>
 				</configuration>
-
 	        </plugin>
+	        
+	        <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-failsafe-plugin</artifactId>
+		        <version>3.0.0-M5</version>
+		        <dependencies>
+      				<dependency>
+        				<groupId>org.apache.maven.surefire</groupId>
+        				<artifactId>surefire-junit47</artifactId>
+       					<version>3.0.0-M5</version>
+      				</dependency>
+    			</dependencies>
+		        <configuration>
+        			<argLine>--enable-preview</argLine>
+    			</configuration>
+		        <executions>
+		          <execution>
+		            <goals>
+		              <goal>integration-test</goal>
+		              <goal>verify</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+      		</plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
